# openapi/openapiUsers.yaml
@@ -4,41 +4,41 @@ info:
   title: API
   version: 1.0.0
 paths:
-  /tasks:
+  /Users:
     get:
-      summary: Get all tasks
+      summary: Get all Users
       tags:
-        - tasks
+        - Users
       responses:
         '200':
-          description: A list of tasks
+          description: A list of Users
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Task'
+                  $ref: '#/components/schemas/User'
     post:
-      summary: Create a new task
+      summary: Create a new User
       tags:
-        - tasks
+        - Users
       requestBody:
-        description: The task to create
+        description: The user to create
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Task'
+              $ref: '#/components/schemas/User'
       responses:
         '201':
-          description: The created task
+          description: The created user
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Task'
-  /tasks/{id}:
+                $ref: '#/components/schemas/User'
+  /Users/{id}:
     patch:
-      summary: Update task by ID
+      summary: Update User by ID
       parameters:
         - name: id
           in: path
@@ -54,21 +54,21 @@ paths:
             schema:
               type: object
               properties:
-                task:
+                Email:
                   type: string
-                  example: "Новая задача"
-                is_done:
-                  type: boolean
-                  example: true
+                  example: "почта"
+                Password:
+                  type: string
+                  example: "пароль"
       responses:
         '200':
-          description: Successful task update
+          description: Successful user update
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Task'
+                $ref: '#/components/schemas/User'
         '404':
-          description: Task not found
+          description: User not found
         '400':
           description: Bad request
     delete:
@@ -92,13 +92,14 @@ paths:
 
 components:
   schemas:
-    Task:
+    User:
       type: object
       properties:
         id:
           type: integer
           format: uint
-        task:
+        Email:
           type: string
-        is_done:
-          type: boolean
+        Password:
+          type: string
+
